# madsqlite-core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  doxygen-config  madsqlite-lib
docs/: _mad_constants_8hpp_source.html  _mad_content_values_8hpp_source.html  _mad_database_8hpp_source.html  _mad_query_8hpp_source.html  annotated.html  classes.html  classmadsqlite_1_1_mad_content_values-members.html  classmadsqlite_1_1_mad_content_values.html  classmadsqlite_1_1_mad_database-members.html  classmadsqlite_1_1_mad_database.html  classmadsqlite_1_1_mad_query-members.html  classmadsqlite_1_1_mad_query.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_87f1709f7ae3054032ec1b9316120f0d.html  dir_fdf2b31f12d3ebb2f617242d0514024b.html  files.html  functions.html  functions_func.html  index.html
docs/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  classes_0.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
latex/: annotated.tex  classmadsqlite_1_1_mad_content_values.tex  classmadsqlite_1_1_mad_database.tex  classmadsqlite_1_1_mad_query.tex  dir_87f1709f7ae3054032ec1b9316120f0d.tex  dir_fdf2b31f12d3ebb2f617242d0514024b.tex  refman.tex
src/main/cpp/: Constants.hpp  ContentValues.cpp  ContentValues.hpp  Cursor.cpp  Cursor.hpp  Database.cpp  Database.hpp  MadContentValues.cpp  MadContentValues.hpp  MadContentValuesImpl.cpp  MadContentValuesImpl.hpp  MadDatabase.cpp  MadDatabase.hpp  MadDatabaseImpl.cpp  MadDatabaseImpl.hpp  MadQuery.cpp  MadQuery.hpp  MadQueryImpl.cpp  MadQueryImpl.hpp  MadSqlite.cpp  MadSqliteJni.cpp  MadUtil.hpp  Main.cpp  SQLITE.md  Util.cpp
src/main/cpp/api/: MadConstants.hpp  MadContentValues.hpp  MadDatabase.hpp  MadQuery.hpp  MadSqlType.hpp
src/main/cpp/internal/: MadConstants.hpp  MadUtil.hpp
src/main/cpp/tests/: CMakeLists.txt  MadDatabaseTest.cpp
